--- a/sources/AssemblyVisualizer/InteractionBrowser/InteractionBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/InteractionBrowser/InteractionBrowserWindow.xaml
@@ -321,6 +321,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <TextBlock Text="Select types to visualize"
                        HorizontalAlignment="Center"
@@ -381,9 +382,20 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </ScrollViewer>
-
+            <StackPanel Grid.Row="2" Margin="0, 6"
+                        HorizontalAlignment="Center">
+                <CheckBox IsChecked="{Binding ShowUnconnectedVertices}"
+                          Margin="0, 4">
+                    <CheckBox.Content>
+                        <TextBlock Text="Display unconnected members"
+                                   Foreground="Gray"
+                                   FontSize="14"/>
+                    </CheckBox.Content>
+                </CheckBox>
+                          
+            </StackPanel>
             <StackPanel Orientation="Horizontal"
-                        Grid.Row="2"
+                        Grid.Row="3"
                         HorizontalAlignment="Center"
                         Margin="0, 10">
                 <Button Content="Apply"
