--- a/sources/AssemblyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -19,78 +19,91 @@
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
             <DataTemplate x:Key="AssemblyTemplate">
-                <Border Margin="5, 0, 5, 10"
-                        BorderBrush="#888888"
-                        BorderThickness="1, 0, 0, 1">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Text="{Binding Name}"
-                                   ToolTip="{Binding FullName}"
-                                   FontSize="16"
-                                   FontWeight="Bold"
-                                   Margin="6, 6, 2, 3"                               
-                                   TextWrapping="Wrap"/>
+                <ToggleButton IsChecked="{Binding IsSelected}"
+                              Cursor="Hand">
+                    <ToggleButton.Template>
+                        <ControlTemplate>
+                            <Border x:Name="brd"
+                                    Margin="5, 0, 5, 10"
+                                    BorderBrush="#888888"
+                                    BorderThickness="1, 0, 0, 1"
+                                    Background="Transparent">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding Name}"
+                                               ToolTip="{Binding FullName}"
+                                               FontSize="16"
+                                               FontWeight="Bold"
+                                               Margin="6, 6, 2, 3"                               
+                                               TextWrapping="Wrap"/>
 
-                        <Button x:Name="btnRemove"
-                                Grid.Column="1"
-                                Command="{Binding RemoveCommand}"                                                                               
-                                MinWidth="16"
-                                VerticalAlignment="Top"
-                                HorizontalAlignment="Right"
-                                Opacity="0.3"
-                                Margin="3, 8, 3, 0">
-                            <Button.Template>
-                                <ControlTemplate>
-                                    <Border Background="Transparent">
-                                        <Path Stretch="Fill" 
-                                              StrokeThickness="0.5" 
-                                              Stroke="#FF333333" 
-                                              Fill="#FF969696" 
-                                              Data="F1 M 0,1.3333L 1.33333,0L 4,2.6666L 6.6666,0 8,1.3333L 5.3333,4L 8,6.6666L 6.6666,8L 4,5.3333L 1.3333,8L 0,6.6666L 2.6666,4L 0,1.3333 Z " 
-                                              HorizontalAlignment="Stretch" 
-                                              VerticalAlignment="Stretch"
-                                              Height="10"
-                                              Width="10"
-                                              Margin="5, 0"/>
-                                    </Border>
-                                </ControlTemplate>
-                            </Button.Template>
-                        </Button>
+                                    <Button x:Name="btnRemove"
+                                            Grid.Column="1"
+                                            Command="{Binding RemoveCommand}"                                                                               
+                                            MinWidth="16"
+                                            VerticalAlignment="Top"
+                                            HorizontalAlignment="Right"
+                                            Opacity="0.3"
+                                            Margin="3, 8, 3, 0">
+                                        <Button.Template>
+                                            <ControlTemplate>
+                                                <Border Background="Transparent">
+                                                    <Path Stretch="Fill" 
+                                                          StrokeThickness="0.5" 
+                                                          Stroke="#FF333333" 
+                                                          Fill="#FF969696" 
+                                                          Data="F1 M 0,1.3333L 1.33333,0L 4,2.6666L 6.6666,0 8,1.3333L 5.3333,4L 8,6.6666L 6.6666,8L 4,5.3333L 1.3333,8L 0,6.6666L 2.6666,4L 0,1.3333 Z " 
+                                                          HorizontalAlignment="Stretch" 
+                                                          VerticalAlignment="Stretch"
+                                                          Height="10"
+                                                          Width="10"
+                                                          Margin="5, 0"/>
+                                                </Border>
+                                            </ControlTemplate>
+                                        </Button.Template>
+                                    </Button>
 
-                        <StackPanel Grid.Row="1"
-                                    Grid.ColumnSpan="2"
-                                    Margin="8, 0, 8, 3">
-                            <TextBlock Margin="0, 3">
-                                <Run Text="Version: " FontStyle="Italic"/>
-                                <TextBlock Text="{Binding Version}" FontWeight="Bold"/>
-                            </TextBlock>                        
-                            <TextBlock Margin="0, 3">
-                                <Run Text="Exported types: " FontStyle="Italic"/>
-                                <TextBlock Text="{Binding ExportedTypesCount}" FontWeight="Bold"/>
-                            </TextBlock>
-                            <TextBlock Margin="0, 3">
-                                <Run Text="Internal types: " FontStyle="Italic"/>
-                                <TextBlock Text="{Binding InternalTypesCount}" FontWeight="Bold"/>
-                            </TextBlock>
-                        </StackPanel>
+                                    <StackPanel Grid.Row="1"
+                                                Grid.ColumnSpan="2"
+                                                Margin="8, 0, 8, 3">
+                                        <TextBlock Margin="0, 3">
+                                            <Run Text="Version: " FontStyle="Italic"/>
+                                            <TextBlock Text="{Binding Version}" FontWeight="Bold"/>
+                                        </TextBlock>
+                                        <TextBlock Margin="0, 3">
+                                            <Run Text="Exported types: " FontStyle="Italic"/>
+                                            <TextBlock Text="{Binding ExportedTypesCount}" FontWeight="Bold"/>
+                                        </TextBlock>
+                                        <TextBlock Margin="0, 3">
+                                            <Run Text="Internal types: " FontStyle="Italic"/>
+                                            <TextBlock Text="{Binding InternalTypesCount}" FontWeight="Bold"/>
+                                        </TextBlock>
+                                    </StackPanel>
 
-                    </Grid>
-                </Border>
-                <DataTemplate.Triggers>
-                    <Trigger SourceName="btnRemove" Property="IsMouseOver" Value="True">
-                        <Setter TargetName="btnRemove" Property="Opacity" Value="1"/>
-                    </Trigger>
-                    <DataTrigger Binding="{Binding ShowRemoveCommand}" Value="False">
-                        <Setter TargetName="btnRemove" Property="Visibility" Value="Collapsed"/>
-                    </DataTrigger>
-                </DataTemplate.Triggers>
+                                </Grid>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger SourceName="btnRemove" Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="btnRemove" Property="Opacity" Value="1"/>
+                                </Trigger>
+                                <DataTrigger Binding="{Binding ShowRemoveCommand}" Value="False">
+                                    <Setter TargetName="btnRemove" Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                                    <Setter TargetName="brd" Property="BorderBrush" Value="Green"/>
+                                    <Setter TargetName="brd" Property="Background" Value="#88D6FFC9"/>
+                                </DataTrigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </ToggleButton.Template>
+                </ToggleButton>                
             </DataTemplate>
         </ResourceDictionary>
     </UserControl.Resources>
