--- a/sources/AssemblyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                    
-                    xmlns:ViewModels="clr-namespace:AssemblyVisualizer.AssemblyBrowser.ViewModels">
+                    xmlns:ViewModels="clr-namespace:AssemblyVisualizer.AssemblyBrowser.ViewModels"
+                    xmlns:HAL="clr-namespace:AssemblyVisualizer.HAL">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="..\..\Common\ImagesDictionary.xaml"/>
         <ResourceDictionary Source="..\..\Common\ControlStylesDictionary.xaml"/>
@@ -83,7 +84,8 @@
                                     MinHeight="0"
                                     Background="{StaticResource InteractionBrowserIconDrawing}"
                                     Style="{StaticResource ImageButtonStyle}"                                    
-                                    ToolTip="Browse Interactions"/>
+                                    ToolTip="Browse Interactions"
+                                    Visibility="{Binding Source={x:Static HAL:Services.SupportsInteractionBrowser}, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                             
                             <Button Command="{Binding ShowMembersCommand}"                   
                                     Width="16"
