Interaction Browser: Fixed issue with member background colors in graph view

--- a/sources/AssemblyVisualizer/InteractionBrowser/InteractionBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/InteractionBrowser/InteractionBrowserWindow.xaml
@@ -319,7 +319,7 @@
               Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition />
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
