--- a/sources/AssemblyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -84,8 +84,7 @@
                                     MinHeight="0"
                                     Background="{StaticResource InteractionBrowserIconDrawing}"
                                     Style="{StaticResource ImageButtonStyle}"                                    
-                                    ToolTip="Browse Interactions"
-                                    Visibility="{Binding Source={x:Static HAL:Services.SupportsInteractionBrowser}, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                    ToolTip="Browse Interactions"/>
                             
                             <Button Command="{Binding ShowMembersCommand}"                   
                                     Width="16"
