--- a/sources/AssemblyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -348,8 +348,8 @@
                                         MinHeight="0"
                                         Background="{StaticResource InteractionBrowserIconDrawing}"
                                         Style="{StaticResource ImageButtonStyle}"                                    
-                                        ToolTip="Browse Interactions"
-                                        Visibility="{Binding Source={x:Static HAL:Services.SupportsInteractionBrowser}, Converter={StaticResource BooleanToVisibilityConverter}}"/>         
+                                        ToolTip="Browse Interactions"/>   
+                                              
                                 
                             </StackPanel>                                
                         </Grid>
