--- a/sources/AssemblyVisualizer/InteractionBrowser/InteractionBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/InteractionBrowser/InteractionBrowserWindow.xaml
@@ -83,15 +83,15 @@
                                                         <Storyboard>
                                                             <ColorAnimation Storyboard.TargetName="brdBrush"
                                                                             Storyboard.TargetProperty="Color"
-                                                                            To="#FF000000"
-                                                                            BeginTime="0:0:2.0"
+                                                                            To="Black"
+                                                                            BeginTime="0:0:1.5"
                                                                             Duration="0:0:0.4"
                                                                             AccelerationRatio="0.2"
-                                                                            DecelerationRatio="0.2" />
+                                                                            DecelerationRatio="0.2"/>
                                                             <ThicknessAnimation Storyboard.TargetName="brd"
                                                                                 Storyboard.TargetProperty="BorderThickness"
                                                                                 To="3, 2"
-                                                                                BeginTime="0:0:2.0"
+                                                                                BeginTime="0:0:1.5"
                                                                                 Duration="0:0:0.4"
                                                                                 AccelerationRatio="0.2"
                                                                                 DecelerationRatio="0.2"/>
@@ -103,21 +103,19 @@
                                                             <Storyboard>
                                                                 <ColorAnimation Storyboard.TargetName="brdBrush"
                                                                                 Storyboard.TargetProperty="Color"
-                                                                                To="#FFFFFFFF"                                                                                
-                                                                                Duration="0:0:0.4"
-                                                                                AccelerationRatio="0.2"
-                                                                                DecelerationRatio="0.2" />
-                                                            <ThicknessAnimation Storyboard.TargetName="brd"
-                                                                                Storyboard.TargetProperty="BorderThickness"
-                                                                                To="0"                                                                                
+                                                                                To="Transparent" 
                                                                                 Duration="0:0:0.2"
                                                                                 AccelerationRatio="0.2"
                                                                                 DecelerationRatio="0.2"/>
+                                                                <ThicknessAnimation Storyboard.TargetName="brd"
+                                                                                    Storyboard.TargetProperty="BorderThickness"
+                                                                                    To="0"
+                                                                                    Duration="0:0:0.2"
+                                                                                    AccelerationRatio="0.2"
+                                                                                    DecelerationRatio="0.2"/>
                                                         </Storyboard>
                                                         </BeginStoryboard>
-                                                    </DataTrigger.ExitActions>
-                                                    <!--Setter TargetName="brd" Property="Background" Value="White" />
-                                                <Setter TargetName="brd" Property="BorderBrush" Value="Black" />-->
+                                                    </DataTrigger.ExitActions>                                                    
                                             </DataTrigger>
                                         </DataTemplate.Triggers>
 
