--- a/sources/AssemblyVisualizer/InteractionBrowser/InteractionBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/InteractionBrowser/InteractionBrowserWindow.xaml
@@ -380,43 +380,41 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <ItemsControl ItemsSource="{Binding}"
-                                          Margin="6, 0">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Grid>
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="Auto"/>
-                                                <RowDefinition Height="Auto"/>
-                                            </Grid.RowDefinitions>
-                                            <CheckBox IsChecked="{Binding IsSelected}">
-                                                <CheckBox.Content>
-                                                    <TextBlock Text="{Binding Name}"
-                                                           Foreground="Gray"
-                                                           FontSize="16"/>
-                                                </CheckBox.Content>
-                                            </CheckBox>
-                                            <CheckBox x:Name="cbxInternals"
-                                                      IsChecked="{Binding ShowInternals}"
-                                                      Grid.Row="1"
-                                                      Margin="10, 5, 0, 5"
-                                                      Visibility="Collapsed">
-                                                <CheckBox.Content>
-                                                    <TextBlock Text="Internals"
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <ItemsControl ItemsSource="{Binding Types}"
+                                              Margin="6, 0">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="Auto"/>
+                                                    <RowDefinition Height="Auto"/>
+                                                </Grid.RowDefinitions>
+                                                <CheckBox IsChecked="{Binding IsSelected}">
+                                                    <CheckBox.Content>
+                                                        <TextBlock Text="{Binding Name}"
                                                                Foreground="Gray"
-                                                               FontSize="11"/>
-                                                </CheckBox.Content>
-                                            </CheckBox>
-
-                                        </Grid>
-                                        <DataTemplate.Triggers>
-                                            <DataTrigger Binding="{Binding IsSelected}" Value="True">
-                                                <Setter TargetName="cbxInternals" Property="Visibility" Value="Visible"/>
-                                            </DataTrigger>
-                                        </DataTemplate.Triggers>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
+                                                               FontSize="16"/>
+                                                    </CheckBox.Content>
+                                                </CheckBox> 
+                                            </Grid>                                            
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                                <CheckBox IsChecked="{Binding AllSelected}"
+                                          Margin="6, 10, 0, 0"
+                                          Grid.Row="1">
+                                    <CheckBox.Content>
+                                        <TextBlock Text="All"
+                                                   Foreground="Gray"
+                                                   FontSize="16"/>
+                                    </CheckBox.Content>
+                                </CheckBox>
+                            </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
