Added hiding type and assembly lists on double click in graph view

--- a/sources/AssemblyVisualizer/AssemblyBrowser/Screens/GraphScreenView.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/Screens/GraphScreenView.xaml
@@ -273,7 +273,8 @@
                 CornerRadius="8"
                 Margin="0, 0, 12, 8"
                 Visibility="{Binding IsAssemblyListVisible, Converter={StaticResource boolVisibilityConverter}}">
-            <ItemsControl ItemsSource="{Binding Assemblies}"/>
+            <ItemsControl ItemsSource="{Binding Assemblies}"
+                          MouseDoubleClick="AssemblyListMouseDoubleClick"/>
         </Border>        
         
         <StackPanel VerticalAlignment="Bottom"
